<resources>
    <string name="app_name">Denso</string>
    <string name="openingtime">Opening Saturday till Thursday </string>
    <string name="to"> to </string>
    <string name="firstnameerror">Firstname Field cannot be Empty!</string>
    <string name="lastnameerror">Lastname Field cannot be Empty!</string>
    <string name="emailerror">Email Field cannot be Empty!</string>
    <string name="phonenumbererror">Phone Number Field cannot be Empty!</string>
    <string name="BookingFragment_nobrancherror">There is no branch! you can not set any booking</string>
    <string name="city_state_zip">State/Zip</string>
    <string name="phone_number1">Phone Number 1</string>
    <string name="phone_number2">Phone Number 2</string>
    <string name="or">————————— OR —————————</string>
    <string name="there_should_be_no_space_in_last_name">There should be no space in last name</string>
    <string name="there_should_be_no_space_in_first_name">There should be no space in last name</string>
    <string name="street">Street 1</string>
    <string name="street2">Street 2</string>
    <string name="company_name">Company Name/Shop Name</string>
    <string name="personal_information">Personal Information</string>
    <string name="homeowner_name">Customer No/Owner Name</string>
    <string name="select_services">Select Services</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="fragment_initial_warranty_next">Next</string>
    <string name="failed_part">Failed Part</string>
    <string name="sales_order_or_invoice_number">Invoice Number</string>
    <string name="manufacturer">Manufacturer</string>
    <string name="unit_model_number">Part Receipt Voucher:Damage/Warranty no (4747)</string>
    <string name="unit_serial_number">Unit Serial Number</string>
    <string name="enter_message">Enter Message</string>
    <string name="specific_failure_reason">Specific Failure Reason</string>
    <string name="replacement_part">Replacement Part</string>
    <string name="new_part_number">New Part Number</string>
    <string name="new_part_name">New part Name</string>
    <string name="new_part_invoice_number">New Part Invoice Number</string>
    <string name="new_serial_number">New Serial Number</string>
    <string name="submit_claim">Submit Claim</string>
    <string name="bring_original_dj_auto_e_invoice_along_with_damaged_parts">Bring Original DJ Auto E-invoice Along With Damaged Parts.</string>
    <string name="original_unit_install_date">Original Unit Install Date</string>
    <string name="select_date">Select Date</string>
    <string name="failed_date">Failed Date</string>
    <string name="company_phone_number_not_valid">Company\'s Phone Number is not Valid!</string>
    <string name="homeowner_phone_number_not_Valid">HomeOwner\'s Phone Number is not Valid!</string>
    <string name="company_name_empty">Company Name can\'t be Empty!</string>
    <string name="street_cant_be_empty">Street can\'t be Empty!</string>
    <string name="city_name_cant_be_empty">City Name can\'t be Empty!</string>
    <string name="homeownername_cant_be_empty">Home Owner Name Can\'t be Empty!</string>
    <string name="homeownerstreet_cant_be_empty">Home Owner Street can\'t be Empty!</string>
    <string name="homeownercityname_cant_be_empty">Home Owner City Name can\'t be Empty!</string>
    <string name="please_select_date">Please Select Date!</string>
    <string name="salesorder_cant_be_empty">Sales order can\'t be empty!</string>
    <string name="manufacturer_cant_be_empty">Manufacturer can\'t be empty!</string>
    <string name="unit_model_cant_be_empty">Part Receipt Voucher can\'t be empty!</string>
    <string name="unit_serial_cant_be_empty">Unit serial can\'t be empty!</string>
    <string name="message_cant_be_empty">Message can\'t be empty!</string>
    <string name="your_claim_request_has_been_submitted_successfully_and_send_a_copy_at_your_registered_email">Your claim Request has been submitted successfully and send a copy at your registered email.</string>
    <string name="additional_comments">Additional Comments</string>
    <string name="unit_part_number">Unit Part Number</string>
    <string name="model_number">Model Number</string>
    <string name="serial_number">Serial Number</string>
    <string name="comments_cant_be_empty">Comments can\'t be empty!</string>
    <string name="suadiarabiacode">+966</string>
    <string name="select_vehicle_model">Select Vehicle Model</string>
    <string name="no_vehicle_models_found">No Vehicle Models Found!</string>
    <string name="please_select_vehicle_name">Please Select Vehicle Name!</string>
    <string name="please_select_vehicle_model">Please Select Vehicle Model!</string>
    <string name="serail_number_cant_be_empty">Serial Number can\'t be Empty!</string>
    <string name="unit_part_number_cant_be_empty">Unit Part Number Can\'t be Empty!</string>
    <string name="please_select_services">Please select services!</string>
    <string name="no_services_found">No services found!</string>
    <string name="customername">Customer Name/Shop Name</string>
    <string name="street1">Street 1 </string>
    <string name="city">City</string>
    <string name="hurry_up">Hurry Up!</string>
    <string name="air_conditioning_service_maintenance_and_repair">Air Conditioning Service, Maintenance and Repair:</string>
    <string name="free_health_text">Free Health Checks, Air-conditioning Anti-bacterial clean, air-conditioning re-gas, Checking Freon level, Detection of leaks in the system, Inspection of hoses condition, Inspection of seals condition.</string>
</resources>